--- a/css/index.css
+++ b/css/index.css
@@ -139,13 +139,32 @@ html {
   position: relative;
   background-image: url('../images/header-bg.png');
   background-color: #cccccc;
-  height: 100vh;
+  height: 98vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+.header-bg a {
+  border: 3px solid #067BC2;
+  border-radius: 50px;
+  background-color: rgba(6, 123, 194, 0.4);
+  font-size: 4rem;
+  color: white;
+  text-decoration: none;
+  text-shadow: 0 0 4px #000, 0 0 6px #000;
+  padding: 10px 60px;
+  position: absolute;
+  bottom: 120px;
+  right: 20%;
+  transition: 500ms background-color, 510ms text-shadow;
+}
+.header-bg a:hover {
+  background-color: #ffc107;
+  text-shadow: 0 0 4px #000, 0 0 6px #000, 0 0 8px #000, 0 0 10px #000;
+}
 .header-text {
-  background-color: rgba(0, 0, 0, 0.25);
+  border: 3px solid #067BC2;
+  background-color: rgba(6, 123, 194, 0.4);
   color: white;
   height: 450px;
   width: 375px;
@@ -157,6 +176,8 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  -webkit-box-shadow: 0 0 10px 6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px 9px rgba(0, 0, 0, 0.75);
 }
 .header-text h1 {
   font-size: 8.4rem;
@@ -168,4 +189,74 @@ html {
   letter-spacing: 4px;
   text-align: center;
   text-shadow: 0 0 4px #000, 0 0 6px #000, 0 0 8px #000, 0 0 10px #000;
+}
+/*
+-------------- Tiles Styles --------------
+*/
+.tile-container {
+  padding: 120px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.tile-container .tile {
+  border: 4px solid #ffc107;
+  height: 450px;
+  width: 28%;
+  color: #00008B;
+}
+.tile-container .tile h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffc107;
+  width: 100%;
+  height: 70px;
+  font-size: 4.6rem;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+.tile-container .tile .tile-content {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: center;
+  height: 80%;
+}
+.tile-container .tile .tile-content p {
+  font-size: 2.8rem;
+  text-align: center;
+}
+.tile-container .tile .tile-content img {
+  height: 150px;
+  width: 150px;
+}
+/*
+-------------- Feautres Styles --------------
+*/
+.features {
+  padding: 50px 0;
+  color: #00008B;
+}
+.features .features-panel {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+  margin: 0 auto;
+}
+.features .features-panel img {
+  height: 275px;
+  width: 275px;
+  padding: 10px;
+  border: 4px solid #ffc107;
+  border-radius: 50%;
+}
+.features .features-panel p {
+  line-height: 40px;
+  font-size: 2.8rem;
+  width: 50%;
+}
+.features .features-panel:nth-child(even) {
+  flex-direction: row-reverse;
 }
