--- a/less/index.less
+++ b/less/index.less
@@ -9,14 +9,45 @@
 
     background-image: url('../images/header-bg.png');
     background-color: #cccccc; 
-    height: 100vh; 
+    height: 98vh; 
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
+
+    a {
+        border: 3px solid #067BC2;
+        border-radius: 50px;
+        background-color: rgba(6, 123, 194, 0.4);
+
+        font-size: 4rem;
+        color: white;
+
+        text-decoration: none;
+        text-shadow: 0 0 4px #000, 
+                        0 0 6px #000; 
+
+        padding: 10px 60px;
+
+        position: absolute;
+        bottom: 120px;;
+        right: 20%;
+
+        transition: 500ms background-color,
+                    510ms text-shadow;
+        &:hover {
+            background-color: #ffc107;
+
+            text-shadow: 0 0 4px #000, 
+                            0 0 6px #000, 
+                            0 0 8px #000, 
+                            0 0 10px #000;
+        }
+    }
 }
 
 .header-text {
-    background-color: rgba(0, 0, 0, 0.25);
+    border: 3px solid #067BC2;
+    background-color: rgba(6, 123, 194, 0.4);
     color: white;
 
     height: 450px;
@@ -31,6 +62,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+
+    -webkit-box-shadow: 0 0 10px 6px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 10px 9px rgba(0, 0, 0, 0.75);
 
     h1 {
         font-size: 8.4rem;
@@ -51,5 +85,94 @@
                         0 0 6px #000, 
                         0 0 8px #000, 
                         0 0 10px #000;
+    }
+}
+
+/*
+-------------- Tiles Styles --------------
+*/
+
+.tile-container {
+    padding: 120px 0;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    .tile {
+        border: 4px solid #ffc107;
+        height: 450px;
+        width: 28%;
+        color: 	#00008B;
+
+        h1 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            background-color: #ffc107;
+            width: 100%;
+            height: 70px;
+
+            font-size: 4.6rem;
+            font-weight: bold;
+            letter-spacing: 3px;
+        }
+
+        .tile-content {
+            display: flex; 
+            flex-direction: column-reverse;
+            justify-content: space-around;
+            align-items: center;
+
+            height: 80%;
+
+            p {
+                font-size: 2.8rem;
+                text-align: center;
+            }
+
+            img {
+                height: 150px;
+                width: 150px;
+            }
+        }
+    }
+}
+
+/*
+-------------- Feautres Styles --------------
+*/
+
+.features {
+    padding: 50px 0;
+    color: 	#00008B;
+
+    .features-panel {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        width: 70%;
+        margin: 0 auto;
+
+        img {
+            height: 275px;
+            width: 275px;
+            padding: 10px;
+
+            border: 4px solid #ffc107;
+            border-radius: 50%;
+        }
+
+        p {
+            line-height: 40px;
+            font-size: 2.8rem;
+            width: 50%;
+        }
+
+        &:nth-child(even) {
+            flex-direction: row-reverse;
+        }
     }
 }
