Footer Styled and Updated

--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ html {
   position: relative;
   background-image: url('../images/header-bg.png');
   background-color: #cccccc;
-  height: 98vh;
+  height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -234,6 +234,12 @@ html {
 /*
 -------------- Feautres Styles --------------
 */
+.banner img {
+  width: 100%;
+}
+/*
+-------------- Feautres Styles --------------
+*/
 .features {
   padding: 50px 0;
   color: #00008B;
@@ -259,4 +265,26 @@ html {
 }
 .features .features-panel:nth-child(even) {
   flex-direction: row-reverse;
+}
+/*
+-------------- Footer Styles --------------
+*/
+footer {
+  background-color: #ffc107;
+  border-top: 6px solid #ffa000;
+  height: 300px;
+  width: 100%;
+  margin-top: 75px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+footer div {
+  font-size: 2rem;
+  text-align: center;
+  line-height: 30px;
+  width: 35%;
+}
+footer div span {
+  font-weight: bold;
 }
