--- a/less/index.less
+++ b/less/index.less
@@ -9,7 +9,7 @@
 
     background-image: url('../images/header-bg.png');
     background-color: #cccccc; 
-    height: 98vh; 
+    height: 100vh; 
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
@@ -144,6 +144,16 @@
 -------------- Feautres Styles --------------
 */
 
+.banner {
+    img {
+        width: 100%;
+    }
+}
+
+/*
+-------------- Feautres Styles --------------
+*/
+
 .features {
     padding: 50px 0;
     color: 	#00008B;
@@ -176,3 +186,33 @@
         }
     }
 }
+
+/*
+-------------- Footer Styles --------------
+*/
+
+footer {
+    background-color: #ffc107;
+    border-top: 6px solid #ffa000;  
+
+    height: 300px;
+    width: 100%;
+    margin-top: 75px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    div {
+        font-size: 2rem;
+        text-align: center;
+        line-height: 30px;
+
+        width: 35%;
+
+        span {
+            font-weight: bold;
+        }
+    }
+}
+
