--- a/less/index.less
+++ b/less/index.less
@@ -89,6 +89,44 @@
 }
 
 /*
+-------------- Header Styles 1st Breakpoint --------------
+*/
+@media(max-width: 1018px) {
+    
+    .header-bg {  
+        a {
+            font-size: 2.8rem;
+            text-align: center;
+
+            width: 50%;
+            padding: 5px 30px;
+
+            bottom: 25px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    .header-text {
+        top: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+    } 
+}
+
+/*
+-------------- Header Styles 1st Breakpoint --------------
+*/
+@media(max-width: 568px) {
+    
+    .header-bg {  
+        a {
+            font-size: 2.4rem;
+        }
+    }
+}
+
+/*
 -------------- Tiles Styles --------------
 */
 
@@ -140,8 +178,35 @@
     }
 }
 
+ /*
+-------------- Tiles Styles 2nd Breakpoint--------------
+*/
+
+@media(max-width: 902px) {
+    .tile-container {
+        flex-direction: column;
+
+        .tile {
+            width: 50%;
+            margin: 20px 0;
+        }
+    }   
+}
+
 /*
--------------- Feautres Styles --------------
+-------------- Tiles Styles 4th Breakpoint --------------
+*/
+
+@media(max-width: 568px) {
+    .tile-container {
+        .tile {
+            width: 75%;
+        }
+    }   
+}
+
+/*
+-------------- Banner Styles --------------
 */
 
 .banner {
@@ -151,7 +216,7 @@
 }
 
 /*
--------------- Feautres Styles --------------
+-------------- Features Styles --------------
 */
 
 .features {
@@ -188,6 +253,32 @@
 }
 
 /*
+-------------- Features Styles 3rd Breakpoint --------------
+*/
+
+
+@media(max-width: 896px) {
+    .features {
+        .features-panel {
+            flex-direction: column;
+            margin: 50px auto;
+
+            p {
+                text-align: center;
+                font-size: 2.2rem;
+
+                margin-top: 20px;
+            }
+
+            &:nth-child(even) {
+                flex-direction: column;
+                margin: 0 auto;
+            }
+        }
+    }
+}
+
+/*
 -------------- Footer Styles --------------
 */
 
@@ -212,6 +303,30 @@ footer {
 
         span {
             font-weight: bold;
+        }
+    }
+}
+
+/*
+-------------- Footer Styles 2nd Breakpoint --------------
+*/
+
+@media(max-width: 902px) {
+    footer {
+        height: auto;
+    }
+}
+
+/*
+-------------- Footer Styles 4th Breakpoint --------------
+*/
+
+@media(max-width: 568px) {
+    footer {
+        flex-direction: column;
+
+        div {
+            margin-top: 75px;
         }
     }
 }
