--- a/less/index.less
+++ b/less/index.less
@@ -1,333 +1,6 @@
 @import './reset.less';
-
-/*
--------------- Header Styles --------------
-*/
-
-.header-bg {  
-    position: relative;
-
-    background-image: url('../images/header-bg.png');
-    background-color: #cccccc; 
-    height: 100vh; 
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    a {
-        border: 3px solid #067BC2;
-        border-radius: 50px;
-        background-color: rgba(6, 123, 194, 0.4);
-
-        font-size: 4rem;
-        color: white;
-
-        text-decoration: none;
-        text-shadow: 0 0 4px #000, 
-                        0 0 6px #000; 
-
-        padding: 10px 60px;
-
-        position: absolute;
-        bottom: 120px;;
-        right: 20%;
-
-        transition: 500ms background-color,
-                    510ms text-shadow;
-        &:hover {
-            background-color: #ffc107;
-
-            text-shadow: 0 0 4px #000, 
-                            0 0 6px #000, 
-                            0 0 8px #000, 
-                            0 0 10px #000;
-        }
-    }
-}
-
-.header-text {
-    border: 3px solid #067BC2;
-    background-color: rgba(6, 123, 194, 0.4);
-    color: white;
-
-    height: 450px;
-    width: 375px;
-    padding: 40px 20px;
-
-    position: absolute;
-    top: 125px;
-    left: 13%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    -webkit-box-shadow: 0 0 10px 6px rgba(0, 0, 0, 0.5);
-        box-shadow: 0 0 10px 9px rgba(0, 0, 0, 0.75);
-
-    h1 {
-        font-size: 8.4rem;
-        letter-spacing: 10px;
-
-        text-shadow: 0 0 4px #000, 
-                        0 0 6px #000, 
-                        0 0 8px #000, 
-                        0 0 10px #000;
-    }
-
-    h2 {
-        font-size: 6.2rem;
-        letter-spacing: 4px;
-
-        text-align: center;
-        text-shadow: 0 0 4px #000, 
-                        0 0 6px #000, 
-                        0 0 8px #000, 
-                        0 0 10px #000;
-    }
-}
-
-/*
--------------- Header Styles 1st Breakpoint --------------
-*/
-@media(max-width: 1018px) {
-    
-    .header-bg {  
-        a {
-            font-size: 2.8rem;
-            text-align: center;
-
-            width: 50%;
-            padding: 5px 30px;
-
-            bottom: 25px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    }
-
-    .header-text {
-        top: 50px;
-        left: 50%;
-        transform: translateX(-50%);
-    } 
-}
-
-/*
--------------- Header Styles 1st Breakpoint --------------
-*/
-@media(max-width: 568px) {
-    
-    .header-bg {  
-        a {
-            font-size: 2.4rem;
-        }
-    }
-}
-
-/*
--------------- Tiles Styles --------------
-*/
-
-.tile-container {
-    padding: 120px 0;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    .tile {
-        border: 4px solid #ffc107;
-        height: 450px;
-        width: 28%;
-        color: 	#00008B;
-
-        h1 {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            
-            background-color: #ffc107;
-            width: 100%;
-            height: 70px;
-
-            font-size: 4.6rem;
-            font-weight: bold;
-            letter-spacing: 3px;
-        }
-
-        .tile-content {
-            display: flex; 
-            flex-direction: column-reverse;
-            justify-content: space-around;
-            align-items: center;
-
-            height: 80%;
-
-            p {
-                font-size: 2.8rem;
-                text-align: center;
-            }
-
-            img {
-                height: 150px;
-                width: 150px;
-            }
-        }
-    }
-}
-
- /*
--------------- Tiles Styles 2nd Breakpoint--------------
-*/
-
-@media(max-width: 902px) {
-    .tile-container {
-        flex-direction: column;
-
-        .tile {
-            width: 50%;
-            margin: 20px 0;
-        }
-    }   
-}
-
-/*
--------------- Tiles Styles 4th Breakpoint --------------
-*/
-
-@media(max-width: 568px) {
-    .tile-container {
-        .tile {
-            width: 75%;
-        }
-    }   
-}
-
-/*
--------------- Banner Styles --------------
-*/
-
-.banner {
-    img {
-        width: 100%;
-    }
-}
-
-/*
--------------- Features Styles --------------
-*/
-
-.features {
-    padding: 50px 0;
-    color: 	#00008B;
-
-    .features-panel {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        width: 70%;
-        margin: 0 auto;
-
-        img {
-            height: 275px;
-            width: 275px;
-            padding: 10px;
-
-            border: 4px solid #ffc107;
-            border-radius: 50%;
-        }
-
-        p {
-            line-height: 40px;
-            font-size: 2.8rem;
-            width: 50%;
-        }
-
-        &:nth-child(even) {
-            flex-direction: row-reverse;
-        }
-    }
-}
-
-/*
--------------- Features Styles 3rd Breakpoint --------------
-*/
-
-
-@media(max-width: 896px) {
-    .features {
-        .features-panel {
-            flex-direction: column;
-            margin: 50px auto;
-
-            p {
-                text-align: center;
-                font-size: 2.2rem;
-
-                margin-top: 20px;
-            }
-
-            &:nth-child(even) {
-                flex-direction: column;
-                margin: 0 auto;
-            }
-        }
-    }
-}
-
-/*
--------------- Footer Styles --------------
-*/
-
-footer {
-    background-color: #ffc107;
-    border-top: 6px solid #ffa000;  
-
-    height: 300px;
-    width: 100%;
-    margin-top: 75px;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    div {
-        font-size: 2rem;
-        text-align: center;
-        line-height: 30px;
-
-        width: 35%;
-
-        span {
-            font-weight: bold;
-        }
-    }
-}
-
-/*
--------------- Footer Styles 2nd Breakpoint --------------
-*/
-
-@media(max-width: 902px) {
-    footer {
-        height: auto;
-    }
-}
-
-/*
--------------- Footer Styles 4th Breakpoint --------------
-*/
-
-@media(max-width: 568px) {
-    footer {
-        flex-direction: column;
-
-        div {
-            margin-top: 75px;
-        }
-    }
-}
-
+@import './modules/header.less';
+@import './modules/tiles.less';
+@import './modules/banner.less';
+@import './modules/features.less';
+@import './modules/footer.less';
