Credits Page Completed

--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,9 @@
 @import './reset.less';
+@import './modules/navigation.less';
 @import './modules/header.less';
 @import './modules/tiles.less';
 @import './modules/banner.less';
 @import './modules/features.less';
 @import './modules/footer.less';
+@import './modules/backgrounds.less';
+@import './modules/credits.less';
