--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,35 @@ html {
 html a {
   cursor: pointer;
 }
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 100%;
+  background-color: #ffc107;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+}
+nav .brand {
+  font-size: 2.6rem;
+  font-weight: bold;
+  padding: 10px 0 0 15px;
+}
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+nav ul li {
+  font-size: 1.8rem;
+  margin-right: 12px;
+}
+nav ul li a {
+  color: black;
+  text-decoration: none;
+}
 /*
 -------------- Header Styles --------------
 */
@@ -404,4 +433,30 @@ footer div span {
   footer div {
     margin-top: 75px;
   }
+}
+.angled-bg {
+  background-color: #067BC2;
+  min-height: 800px;
+  -webkit-clip-path: polygon(0 22%, 100% 0%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 22%, 100% 0%, 100% 100%, 0% 100%);
+  width: 100%;
+  margin: 0;
+  padding-top: 200px;
+  z-index: -1;
+}
+.credits {
+  height: 500px;
+  margin-top: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.credits h3 {
+  font-size: 3.2rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+.credits li {
+  font-size: 2.2rem;
 }
